Reorganized project layout.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,5 @@
 include *.txt
 recursive-include docs *.txt
+recursive-include data *.png
+recursive-include data *.svg
+recursive-include renamer *.ui
