--- a/data/desktop/exif-renamer.desktop
+++ b/data/desktop/exif-renamer.desktop
@@ -5,7 +5,7 @@ Name=ExifRenamer
 GenericName=Exif photo renamer
 Comment=Rename photos based on exif data
 Comment[de]=Dateien mit Exif Daten umbenennen
-Icon=exif-renamer
+Icon=/usr/share/icons/hicolor/256x256/apps/exif-renamer.png
 Exec=exif-renamer %f
 Terminal=false
 MimeType=image/jpeg;
