* Fixed typo in file select mask. * Added Canon 550D configuration.

--- a/data/manufacturers/Canon.ini
+++ b/data/manufacturers/Canon.ini
@@ -3,3 +3,9 @@ Make: Canon
 Model: 'Canon DIGITAL IXUS 80 IS'
 datetime: DateTime
 orientation: Orientation
+
+[Canon EOS 550D]
+Make: Canon
+Model: 'Canon EOS 550D'
+datetime: DateTime
+orientation: Orientation
