--- a/data/manufacturers/Canon.ini
+++ b/data/manufacturers/Canon.ini
@@ -1,11 +1,11 @@
 [Canon DIGITAL IXUS 80 IS]
 Make: Canon
 Model: 'Canon DIGITAL IXUS 80 IS'
-datetime: DateTime
+datetimeoriginal: DateTimeOriginal
 orientation: Orientation
 
 [Canon EOS 550D]
 Make: Canon
 Model: 'Canon EOS 550D'
-datetime: DateTime
+datetimeoriginal: DateTimeOriginal
 orientation: Orientation
